# crdts

./: readme.md
crdts/: Cargo.toml
crdts/proj/: project.penny
crdts/proj/operations/IAAAAAAAAAB7sYGzB3jKYml6j1Unki2zJqiLFaJy6CF0Y8PSG6axxQ/: 000000.pennyop  _initial.pennyop
crdts/proj/operations/IAAAAAAAAABhJI7Tuum3DAIzvVd8V8zO2tBs-n6MMz4W2DO2YnbaJA/: 000000.pennyop  _initial.pennyop
crdts/proptest-regressions/: replicant.txt
crdts/src/: crdt.rs  main.rs  replicant.rs
crdts/test/: project.penny
crdts/testproj/: project.penny
