[package]
name = "crdts"
version = "0.1.0"
authors = ["Andre Popovitch <andre@popovit.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.1"
ring = "0.16.12"

[dev-dependencies]
proptest = "0.9.4"
rand = "0.7.3"
pretty_assertions = "0.6.1"