[package]
name = "crdts"
version = "0.1.0"
authors = ["Andre Popovitch <andre@popovit.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.1"
sodiumoxide = "0.2.5"
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4", "stdweb"] }
ansi_term = "0.12.1"
directories = "2.0"
serde_json = "1.0"

[dev-dependencies]
proptest = "0.9.4"
rand = "0.7.3"
pretty_assertions = "0.6.1"